# subframe

./: .gitignore  Makefile  README.md  bla.py  example.py  example_adbc.py  fetch_extensions.py  local.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
subframe/: __init__.py  case_builder.py  derivation_expression.py  extension_registry.py  grouped_table.py  sql.py  table.py  utils.py  value.py  visitor.py
subframe-rs/: Cargo.toml  example.csv
subframe-rs/src/: lib.rs  main.rs  table.rs  value.rs
subframe/extensions/: extension_function.py  extension_registry.py  extension_scalar_function.py
tests/: test_derivation_expression.py  test_execution.py  test_produce.py  test_registry.py  test_schema_inference.py
tests/consumers/: acero.py  consumer.py  datafusion.py  duckdb.py
